feat: add publication bookmarks
